[package]
name = "fang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
hidapi = "2.6.6"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "net", "signal"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
udev = "0.9.3"
uuid = { version = "1.23.1", features = ["v4"] }
zbus = "5.15.0"
zerocopy = { version = "0.8.48", features = ["derive"] }
