[package]
name = "fangd"
version = "0.1.0"
edition = "2024"

[dependencies]
async-fn-stream = "0.3.2"
color-eyre = "0.6.5"
eyre = "0.6.12"
hex = "0.4.3"
hidapi = "2.6.6"
nix = { version = "0.31.3", features = ["fs"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
udev = "0.9.3"
zbus = { git = "https://github.com/hasali19/zbus" }
zerocopy = { version = "0.8.48", features = ["derive"] }

[dependencies.tokio]
version = "1.52.3"
features = ["io-util", "macros", "net", "rt", "signal", "sync"]
